--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,19 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node dependencies
 node_modules
+client/node_modules/
+server/node_modules/
+
+# Build output
 dist
 dist-ssr
 *.local
+
+# Environment variables
+client/.env
+server/.env
 
 # Editor directories and files
 .vscode/*
