--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1"
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "pg": "^8.17.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.3",
+    "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
     "supertest": "^7.2.2",
