--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,8 +10,9 @@
     "skipLibCheck": true,
     "types": ["node", "jest"],
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "typeRoots": ["node_modules/@types", "types"]
   },
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "types/**/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
