--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,11 +8,11 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "types": ["node", "jest"],
+    "types": ["node", "jest", "express"],
     "sourceMap": true,
     "declaration": true,
-    "typeRoots": ["node_modules/@types", "types"]
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "include": ["**/*.ts", "types/**/*.d.ts"],
+  "include": ["**/*.ts", "types/**/*"],
   "exclude": ["node_modules", "dist"]
 }
