--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,8 +11,8 @@
     "types": ["node", "jest", "express"],
     "sourceMap": true,
     "declaration": true,
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "typeRoots": ["./node_modules/@types", "src/types"]
   },
-  "include": ["**/*.ts", "types/**/*"],
+  "include": ["**/*.ts", "src/types/**/*"],
   "exclude": ["node_modules", "dist"]
 }
